fixed width on narrow screens

--- a/code/styles.css
+++ b/code/styles.css
@@ -6,9 +6,9 @@
     --button: hsl(154, 25%, 30%);
     --hover: hsl(34, 80%, 80%);
     --diasbled: hsl(34, 20%, 80%);
-    
+
     --gap-size: min(8px, 0.5rem);
-    --col-width: calc(32px + 3rem);
+    --col-width: minmax(min-content, calc(32px + 3rem));
     --calc-width: calc(4 * var(--col-width) + 5 * var(--gap-size) + 4px);
     --border: 2px solid var(--button)
 }
@@ -27,7 +27,7 @@ body {
     margin: auto;
     margin-bottom: 3rem;
     padding: 16px;
-    max-width: fit-content;
+    max-width: 100vw;
 }
 
 ::selection {
